# mcp-gateway

./: .gitignore  README.md
mcp-gateway/: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
mcp-gateway/data/: ad_friendly_keywords.json  affiliate_database.json  regional_sensitive_terms.json  safety_wordlists.json
mcp-gateway/src/: __main__.py  config.py  server.py
mcp-gateway/src/schemas/: analytics.py  common.py  trends.py  youtube.py
mcp-gateway/src/services/: __init__.py  ad_keywords.py  ad_scorer.py  affiliate_manager.py  aio_tracker.py  auth_manager.py  cache_manager.py  circuit_breaker.py  compliance.py  content_safety.py  entity_clusterer.py  mock_provider.py  monetization_dashboard.py  publish_scheduler.py  rate_limiter.py  regional_safety.py  webhook.py
mcp-gateway/src/tools/: analytics.py  comments.py  knowledge.py  search.py  trends.py  youtube.py
mcp-gateway/src/utils/: helpers.py  logger.py
